add buy subscription api
